--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 .App {
   text-align: center;
   font-family: 'Arial', sans-serif;
@@ -45,9 +44,9 @@
 }
 
 .navbar a.active {
-  background-color: #0056b3; /* Highlight the active link */
+  background-color: #0056b3;
   color: #fff;
-  font-weight: bold; /* Make active links stand out */
+  font-weight: bold;
 }
 
 img {
@@ -62,6 +61,6 @@ img {
 .page-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px; /* Space between items */
-  justify-content: center; /* Center items horizontally */
+  gap: 10px;
+  justify-content: center;
 }
