--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 .App {
   text-align: center;
   font-family: 'Arial', sans-serif;
@@ -45,23 +44,19 @@
 }
 
 .navbar a.active {
-  background-color: #0056b3; /* Highlight the active link */
+  background-color: #0056b3;
   color: #fff;
-  font-weight: bold; /* Make active links stand out */
-}
-
-img {
-  max-height: 300px;
-  width: auto;
-  height: auto;
-  display: block;
-  object-fit: cover;
-  border-radius: 8px;
+  font-weight: bold;
 }
 
 .page-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px; /* Space between items */
-  justify-content: center; /* Center items horizontally */
+  gap: 10px;
+  justify-content: center;
+}
+
+img {
+  max-height: 300px;
+  border-radius: 8px;
 }
